# agent

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml  requirements.txt  多智能体旅行规划助手_需求开发总结.md
app/: __init__.py  main.py
app/agents/: __init__.py  base.py  hotel.py  itinerary.py  planner.py  transport.py
app/api/: auth.py  routes.py  schemas.py
app/config/: settings.py
app/db/: __init__.py  models.py  repository.py
app/middleware/: prompt_injection_middleware.py
app/observability/: metrics.py
app/orchestration/: __init__.py  stategraph_runner.py
app/queue/: __init__.py  redis_queue.py
app/security/: __init__.py  rag_cleaner.py  security_manager.py  tool_whitelist.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
scripts/: list_amap_mcp_tools.py  probe_amap_official_tools.py  seed_demo_data.py  test_bailian_qwen_agent_mcp.py
tests/: conftest.py  test_agent_reach_adapter.py  test_agent_reach_wiring.py  test_agents.py  test_amap_mcp_adapter.py  test_auth_api.py  test_booking_api.py  test_chat_api.py  test_error_codes_api.py  test_health_api.py  test_persistence_repository.py  test_planner_conflict_detection.py  test_prompt_injection.py  test_security_system.py  test_session_plan_api.py  test_settings.py  test_state_manager.py  test_state_snapshot.py  test_stategraph_runner.py  test_task_api.py  test_task_service.py  test_tool_factory.py  test_tools_mock_provider.py  test_user_isolation.py  test_user_preferences_api.py  test_worker_entrypoint.py  test_worker_recovery.py
(+55 files in other folders)
